-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 3.5.0
-
None
-
many
Among other things:
1. It cannot output complex types. If you know the members of a complex type you can query them, but just stating the variable name of an object, array or function outputs nothing whatsoever.
2. Functions with string properties have a length. This is actually the same in the locals and expressions view. The length property should be 0 unless the object is an array or the length was specifically assigned.
3. console.log(...) when sent through the console does not lead to anything being logged on the console.
4. Syntax errors are silently ignored.
5. QML objects aren't shown, but also silently ignored.
6. There is no way to run a multiline script in the console.
This is all when the program is stopped. While the program is running you get different, but equally strange behavior:
1. "Qt" returns an "Object" with lots of numeric properties that don't have names.
2. "console" is an "Object" without properties. "console.log" is nothing.
3. Any QML id from the program being run is "<undefined>"
4. "this" is an "<unnamed object>"
| For Gerrit Dashboard: QTCREATORBUG-14931 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 124108,3 | QmlJS: Lazy-load console items to allow for recursion | master | qt-creator/qt-creator | Status: MERGED | -2 | 0 |
| 125614,5 | Debugger: Use Qt's JSON encoder for debugger protocol | master | qt-creator/qt-creator | Status: MERGED | -2 | 0 |
| 139237,3 | QmlJS: Fix focus handling in QML/JS console | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
| 139287,4 | QmlJS: Clean up QML console editor | master | qt-creator/qt-creator | Status: MERGED | -2 | 0 |
| 142542,14 | Qml Debugger: Support "evaluate" while engine is running | master | qt-creator/qt-creator | Status: MERGED | -2 | 0 |
| 142689,8 | V4 Debugger: If no context is given inject the QML context | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 142700,11 | QML Inspector: Don't misinterpret objects with ID 0 | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |